# keyboard-bindings

./: Cargo.toml  README.md  build.rs
logo/: Keyboard Bind.rc
src/: components.rs  main.rs  record.rs  ui.rs
