[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
rayon = "1.7.0"
windows-hotkeys = "0.2.0"
font-kit = "0.11"
egui = "0.22.0"
eframe = "0.22.0"
egui_dnd = "0.5.1"
once_cell = "1"
nanoid = "0.4.0"
